--- a/index.html
+++ b/index.html
@@ -9,4 +9,26 @@
   <!-- Contenido de tu aplicación aquí -->
   <script src="main.js"></script>
 </body>
-</html>
+</html> _ _
+<script>
+
+  if ('serviceWorker' in navigator) {
+
+    navigator.serviceWorker.register('service-worker.js')
+
+      .then(function(registration) {
+
+        console.log('Service Worker registrado con éxito:', registration);
+
+      })
+
+      .catch(function(error) {
+
+        console.log('Error al registrar el Service Worker:', error);
+
+      });
+
+  }
+
+</script>
+
