--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <h1>Mi PWA</h1>
+  <h1>Mi web app hecha en 2 dias</h1>
   <!-- Contenido de tu aplicación aquí -->
   <script src="main.js"></script>
 </body>
